--- a/grumpypierre.html
+++ b/grumpypierre.html
@@ -1,14 +1,18 @@
+<style>p.indent{ padding-left: 1.8em }</style>
 <p style="color:#003399;font-size:18px;font-weight:bold;text-align:center;">Current Location: grumpypierre.download</p>
 
 <p style=”color:#000;font-size:14px;font-weight:normal;text-align:left;”>For More Spicy Memes: 
+	<p class="indent">
 <br />
-	<a href=”/chinesebotnet.download” target=”_blank”>chinesebotnet.download</a>
+	<a href="http://www.chinesebotnet.download">chinesebotnet.download</a>
 <br />
-    <a href=”/ripthedream.faith” target=”_blank”>ripthedream.faith</a>
+    <a href="http://www.ripthedream.faith">ripthedream.faith</a>
 <br />
-    <a href=”/dreamteammeme.stream” target=”_blank”>dreamteammeme.stream</a>
+    <a href="http://www.dreamteammeme.stream">dreamteammeme.stream</a>
 <br />
-    <a href=”/bootyquake.party” target=”_blank”>bootyquake.party</a>
+    <a href="http://www.bootyquake.party">bootyquake.party</a>
+<br />
+	<a href="http://www.vapes.racing">vapes.racing</a>
 </p>
 
 <hr />
@@ -16,13 +20,23 @@
 <p style=”color:#454545;font-size:16px;font-weight:normal;font-style:italic;text-align:left;”>Latest Updates</p>
 
 <p style=”color:#000;font-size:14px;font-weight:normal;text-align:left;”>
+	<p class="indent">
 
-<strong>Oct. 29, 2017:</strong>  <a href=”/soundboard.grumpypierre.download” target=”_blank”>Pierre soundboard</a> is still undergoing extensive beta testing. Please stay tuned.</p>
+<strong>Oct. 29, 2017:</strong>  <a href="soundboard.grumpypierre.download">soundboard.grumpypierre.download</a> is still undergoing extensive beta testing. Please stay tuned.</p>
 
 
 <hr />
 <p style="color:#003399;font-size:18px;font-weight:bold;text-align:center;">Meme Life Support Center</p>
 <p style=”color:#000;font-size:14px;font-weight:normal;text-align:left;”>
+	<p class="indent">
 Donations are greatly appreciated. Keep the memes alive.
 <br />
 Bitcoin: 1QJA3SxhGwzpoTsjbAF74Yiw5ipEabN1M4
+<br />
+Ethereum: 0x6e3d91719B863678CE5c8Ca43bCE4F93651866a6
+<br />
+Litecoin: LQ5etpSwgSu1BrCfwyYnDv3g6F5JsetsPn
+<br />
+Gridcoin: SJQxqUJtpt4vaEBzvVN9uRMk1UzurbTwgU
+<br />
+Monero: 49Xx9x8RD4xCkScHHvQx711W8abp5FDBSUxqqmXsTfmHYNhttJwAhrT17Y6kzv1uxcYtRMzF7Ez4GPd9RS4H76qzRfojJvs
